Make sure panels are created on the correct screen

BUG: 408060